--- a/bgp/rib-impl/pom.xml
+++ b/bgp/rib-impl/pom.xml
@@ -33,6 +33,20 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.opendaylight.pathman</groupId>
+            <artifactId>pathman-linkstate-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.pathman</groupId>
+            <artifactId>pathman-path-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>ietf-topology</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>concepts</artifactId>
         </dependency>
